SkyXplore - Fix createAndCancelConstruction test